<resources>
    <string name="app_name">SUB1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies</string>
    <string name="tv_show">Tv Show</string>
    <string name="back_main">Back Main</string>
    <string name="favorite">Favorite</string>
</resources>
