<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/movies"
        android:title="@string/movies"
        app:showAsAction="always"
        android:icon="@drawable/ic_movie" />

    <item android:id="@+id/tvshow"
        android:title="@string/tv_show"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_tv" />

    <item android:id="@+id/favorite"
        android:title="@string/favorite"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_sta" />
</menu>